<resources>
    <string name="app_name">ToDoTaskManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_no_tasks">No tasks</string>
    <string name="cd_add_new_task">add new task</string>
    <string name="tv_due_date_title">due date: %s</string>
    <string name="tv_category_title">category: %s</string>
    <string name="empty_string"> </string>
    <string name="hint_task">task</string>
    <string name="hint_category">category</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="btn_text_add">Add</string>

    <string name="empty_task_name">Type in your task</string>
    <string name="empty_task_category">Choose your category</string>
    <string name="empty_fields">Type in your task and choose your category</string>

    <string name="add_task_success">New Task Added!</string>
    <string name="add_task_failure">Unable to create a task</string>
    <string name="alert_decline">discard</string>
    <string name="alert_accept">Try Again</string>
    <string name="alert_title">Unexpected Error</string>
    <string name="menu_item_clear_tasks">Clear finished tasks</string>
    <string name="menu_remove_items_title">Remove items</string>
    <string name="tv_finished_task">Finished</string>

</resources>