<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_single_task_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15dp"
        app:cardCornerRadius="@dimen/radius_20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:theme="@style/Theme.SingleTaskItemStyle"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_task_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:autoSizeMinTextSize="5sp"
                android:background="@color/red_300"
                android:breakStrategy="simple"
                android:maxHeight="@dimen/max_height_200dp"
                android:padding="@dimen/padding_20dp"
                android:textColor="@color/white"
                tools:text="finish documentation" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_finish_task"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@color/red_200"
                android:buttonTint="@color/white"
                android:gravity="center"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:saveEnabled="false"
                android:text="@string/empty_string" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:minHeight="@dimen/min_height_150dp"
                android:orientation="vertical"
                android:padding="@dimen/padding_15dp">

                <TextView
                    android:id="@+id/tv_task_due_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_due_date_title"
                    android:textSize="@dimen/text_size_16sp"
                    tools:text="due date: 18.09.2021 18:09" />

                <TextView
                    android:id="@+id/tv_task_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_task_due_date"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:text="@string/tv_category_title"
                    android:textSize="@dimen/text_size_16sp"
                    tools:text="category: others" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_finished_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/FinishedTaskStyle"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tv_finished_task" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</layout>